--- a/js/public/css/style.css
+++ b/js/public/css/style.css
@@ -6,7 +6,7 @@ body {
 #controller {
     margin: 60px auto;
     width: 190px;
-    height: 320px;
+    height: 380px;
     background: #000;
     background: -webkit-gradient(linear, left top, right top, color-stop(0%, #131313), color-stop(0%, #111111), color-stop(0%, #1c1c1c), color-stop(8%, #666666), color-stop(50%, #a59393), color-stop(92%, #595959), color-stop(100%, #000000), color-stop(100%, #4c4c4c));
     border: 1px solid transparent;
@@ -80,4 +80,8 @@ ins>span {
 
 .blue {
     background: skyblue!important;
+}
+
+.direction {
+    background: green!important
 }
